# pytorch-tabular-data-classifier

./: main.py  pyproject.toml  requirements.txt
src/: document.ipynb
